--- a/project-1/app/index.html
+++ b/project-1/app/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;URL=/dist/index.html"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="0;URL=/dist/index.html" />
     <title>Redirect Page</title>
-</head>
-<body>
+  </head>
+  <body>
     Redirecting...
-</body>
+  </body>
 </html>
